<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/lunges_side"
                android:fontFamily="@font/tinos_bold"
                android:textColor="@color/purple_500"
                android:textSize="40dp" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="360dp"
                android:layout_height="360dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/side_lunges" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/layout_st3"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/time"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="25dp"
                    app:srcCompat="@drawable/picsart_time" />

                <ImageView
                    android:id="@+id/icanchor6"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center|top"
                    app:srcCompat="@drawable/icanchor" />

                <Chronometer
                    android:id="@+id/timer6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/white"
                    android:layout_marginTop="170dp"
                    android:fontFamily="@font/tinos_bold"
                    android:textSize="40sp"
                    app:layout_constraintTop_toTopOf="@+id/time"/>

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/startTimer6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:background="@drawable/btn_style"
                    android:text="@string/start" />

                <Button
                    android:id="@+id/stopTimer6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_style"
                    android:text="@string/stop" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

 <!--   <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="@string/lunges_side"
            android:textSize="40dp" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="360dp"
            android:layout_height="360dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/side_lunges" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/layout_st3">


            <ImageView
                android:id="@+id/time"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                app:srcCompat="@drawable/picsart_time" />

            <ImageView
                android:id="@+id/icanchor6"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center|top"
                app:srcCompat="@drawable/icanchor" />

            <Chronometer
                android:id="@+id/timer6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white"
                android:layout_marginTop="170dp"
                android:textSize="40sp"
                app:layout_constraintTop_toTopOf="@+id/time"/>


            <Button
                android:id="@+id/startTimer6"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="230dp"
                android:layout_marginEnd="210dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_style"
                android:text="@string/start" />

            <Button
                android:id="@+id/stopTimer6"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="230dp"
                android:layout_marginStart="210dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_style"
                android:text="@string/stop" />


        </FrameLayout>

    </LinearLayout>-->

</androidx.constraintlayout.widget.ConstraintLayout>